# NTemp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: Tools.cmake
config/: Config.cmake.in
include/MyTemplate/: Basic.hxx  Concept.hxx  EBCO.hxx  Func.hxx  FuncTraits.hxx  Name.hxx  Num.hxx  SI.hxx  TemplateList.hxx  TypeID.hxx  TypeList.hxx
include/MyTemplate/List/: List.hxx  TemplateList.hxx  TypeList.hxx
include/MyTemplate/Num/: Bool.hxx  Num.hxx
include/MyTemplate/TypeID/: TypeID.hxx
include/template/: Name.hxx  TypeList.hxx
include/template/list/: List.hxx  TypeList.hxx
src/: CMakeLists.txt
src/EMPTY/: CMakeLists.txt  EMPTY.cxx
src/core/: CMakeLists.txt
src/head_files/: CMakeLists.txt  main.cxx
src/test/: CMakeLists.txt
src/test/0/: meta.cxx
src/test/00_Name/: CMakeLists.txt  main.cxx
src/test/01_List/: CMakeLists.txt  main.cxx
src/test/01_Num/: CMakeLists.txt  main.cpp  main.cxx
src/test/01_Num/01_Sequence/: main.cxx
src/test/02_0_TypeList/: CMakeLists.txt  main.cxx
src/test/02_1_TemplateList/: main.cxx
src/test/02_EBCO/: main.cxx
src/test/02_List/: main.cxx
src/test/02_List/01_TypeList/: main.cxx
src/test/02_List/02_TemplateList/: main.cxx
src/test/02_List/03_Sort/: main.cxx
src/test/02_SI/: main.cxx
src/test/03_EBCOI/: main.cxx
src/test/03_SI/: main.cxx
src/test/03_SIT/: main.cxx
src/test/04_EBCO/: main.cxx
src/test/04_SIT/: main.cxx
src/test/05_SI_CRTP/: CMakeLists.txt  main.cxx
src/test/06_SI_CRTP_Auto/: main.cxx
src/test/06_TypeID/: main.cpp  main.cxx
src/test/07_Func/00_FuncTraits/: main.cxx
src/test/07_Func/01_FuncExpand/: main.cxx
src/test/07_FuncTraits/: main.cxx
src/test/08_Basic/00_ProtectedConstrctor/: CMakeLists.txt  main.cxx
src/test/09_Concept/: main.cxx
